# tla-rl-openenv

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: __init__.py  app.py  requirements.txt  tasks.py  tla_env_environment.py  tlc_runner.py
server/specs/: task1_MC.cfg  task1_mutex_broken.tla  task1_mutex_solution.tla  task2_MC.cfg  task2_token_ring.tla  task2_token_ring_solution.tla  task3_MC.cfg  task3_two_phase_commit_solution.tla
